{
    "name": "InputSystem",
    "maps": [
        {
            "name": "CharacterInput",
            "id": "d34f4f74-9073-47f5-b9d6-9ac8e70733d6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "25127c79-98a4-4118-b0aa-bd9a2930683e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a2c7be58-ffa7-4fed-9d82-ec40f2f42177",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Salute",
                    "type": "Button",
                    "id": "a2b2807c-f774-4d7d-817b-116a82f658d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "dc077a28-15c2-464b-957d-d20da4675e96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUpItem",
                    "type": "Button",
                    "id": "13081611-c87b-4668-af51-59d726ed4206",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "c99208e4-6d75-40ec-9982-2931b50d06c7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "73ee4baa-d98b-428b-b992-f143e7786a09",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1fc4ef9a-0ba4-4c3f-83a3-6f9925c486da",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dfa7a7d9-056f-45f0-b7a2-9ac74dfc2154",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b5b3a95-ca29-4a22-ac0c-b362904170e6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Salute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d131247-5e9d-4188-98da-233f5cf743d0",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dcd8340a-e763-40ab-8053-2cc898ae8418",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUpItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}